--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ astroid==2.4.2
 click==7.1.2
 colorama==0.4.4
 Flask==1.1.2
+Flask-WTF==0.14.3
 isort==5.6.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -14,3 +15,4 @@ toml==0.10.1
 typed-ast==1.4.1
 Werkzeug==1.0.1
 wrapt==1.12.1
+WTForms==2.3.3
